--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+.primary-button {
+  @apply rounded-md py-3 px-4 bg-emerald-400 font-medium hover:bg-emerald-500 hover:text-white transition disabled:hover:bg-emerald-400 disabled:hover:text-black;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
